# space-militarization-analysis

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/raw/: geo.tle  intelligence.tle  military.tle  oneweb.tle  starlink.tle
src/data_loader/: fetch_tle.py
