[project]
name = "space-militarization-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "pyorbital>=1.10.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sgp4>=2.24",
    "shap>=0.47.2",
    "skyfield>=1.53",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
